--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,13 @@ dependencies {
     implementation 'com.nex3z:notification-badge:1.0.2'
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+
+
+
+
 
 }
