--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".RatingBarberActivity"></activity>
+        <activity android:name=".RatingBarberActivity" />
         <activity android:name=".HistoryActivity" />
 
         <service android:name=".Service.MyService">
