--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".AllBookingInfomation"></activity>
         <activity android:name=".RatingBarberActivity" />
         <activity android:name=".HistoryActivity" />
 
